# kindle-to-anki

./: .env.example  .gitignore  LICENSE  README.md  kindle-to-anki.py  pyproject.toml  requirements.txt  tsv_to_apkg.py
kindle_to_anki/: __init__.py  apkg_builder.py  cache.py  config.py  database.py  export.py  gemini_api.py  helpers.py  main.py  normalization.py  notes.py  utils.py
kindle_to_anki/templates/: answer_blue.css  answer_red.css  answer_teal.css  base.css  foreign_native_back.html  foreign_native_front.html  native_foreign_back.html  native_foreign_front.html  native_native_back.html  native_native_front.html  night_mode.css
put_vocab_db_here/: README.md
src/kindle_to_anki/: __init__.py  anki_converter.py  cli.py  config.py  db_reader.py  llm_translator.py  main.py  models.py  pipeline.py  prompt_building.py
src/kindle_to_anki/templates/: answer_foreign.css  answer_native.css  answer_reverse.css  base.css  foreign_native_back.html  native_foreign_back.html  native_foreign_front.html  native_native_back.html  native_native_front.html  night_mode.css
tests/: conftest.py  test_anki_converter.py  test_cli.py  test_config.py  test_db_reader.py  test_llm_translator.py  test_pipeline.py  test_prompt_building.py
tests/data/: mock_vocab.sql
